Fixed status bar alignment, increased spacing

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -48,43 +48,3 @@ atom-panel, .tool-panel {
 .project-find {
   box-shadow: 0 -1px @tab-bar-border-color;
 }
-
-status-bar {
-  box-shadow: 0 -1px rgba(0, 0, 0, 0.3);
-  background: @status-bar-background-color;
-  height: @tab-height;
-  line-height: @tab-height;
-}
-
-status-bar .status-bar-right .inline-block {
-  margin-left: 15px;
-}
-
-status-bar .flexbox-repaint-hack {
-  padding-right: 0;
-}
-
-status-bar .git-branch,
-status-bar .git-status {
-  background-color: darken(@status-bar-background-color, 50%);
-  padding: 0 15px;
-  position: relative;
-  top: -1px;
-  color: @text-color-selected;
-}
-
-status-bar .git-status.inline-block {
-  margin-left: 0;
-  padding-left: 0;
-  padding-right: 10px;
-}
-
-status-bar .text-warning {
-  color: @text-color;
-
-  &:hover {
-    text-decoration: underline;
-    color: inherit;
-    cursor: pointer;
-  }
-}
